# action-execution

./: README.md  setup.py
action_execution/: README.md  action.py  config_keys.py  execution_model.py  failure_case.py
action_execution/execution_models/: FreeSpace.py  PoseSuccessProbability.py  Proximity.py  Reachability.py  ReachabilityChecker.py  ReleaseNearSameCategory.py  ReleaseOverObject.py  free_space.py  model.py  pose_success_probability.py  proximity.py  reachability.py  reachability_checker.py  release_over_object.py  sort_release.py
action_execution/geometry/: bbox.py  object.py  plane.py  pose.py  vector.py
action_execution/logger/: execution_data_logger.py
action_execution/ontology/: actions.owl
action_execution/ontology/actions/: move_base.yaml  pick.yaml  place.yaml  release.yaml  sort_release.yaml  throw.yaml
action_execution/ontology/execution_models/: FreeSpace.yaml  Reachability.yaml  ReleaseNearSameCategory.yaml  free_space.yaml  pose_success_probability.yaml  proximity.yaml  reachability.yaml  reachability_checker.yaml  release_over_object.yaml  sort_release.yaml
action_execution/test_utils/: table_multiclass_objects.py  table_two_objects.py
action_execution/tests/actions/: place_action_test.py  release_action_test.py  sort_release_action_test.py
action_execution/tests/execution_models/: free_space_model_test.py  proximity_model_test.py  reachability_model_test.py
action_execution/utils/: configuration.py
action_execution_ros/ae_data_visualiser/: CMakeLists.txt  package.xml  setup.py
action_execution_ros/ae_data_visualiser/ros/launch/: place_vis_publisher.launch
action_execution_ros/ae_data_visualiser/ros/scripts/: place_vis_publisher
action_execution_ros/ae_msgs/: CMakeLists.txt  package.xml
action_execution_ros/ae_msgs/msg/: ActionDataQuery.msg
action_execution_ros/ae_ros_message_converter/: CMakeLists.txt  package.xml  setup.py
action_execution_ros/ae_ros_message_converter/ros/src/ae_ros_message_converter/: converter_factory.py
action_execution_ros/ae_ros_message_converter/ros/src/ae_ros_message_converter/converters/: bbox_converter.py  converter_base.py  object_converter.py  plane_converter.py  pose_converter.py
action_execution_ros/ae_test_scenario_visualiser/: CMakeLists.txt  package.xml  setup.py
action_execution_ros/ae_test_scenario_visualiser/ros/launch/: test_scenario_visualiser.launch
action_execution_ros/ae_test_scenario_visualiser/ros/scripts/: test_scenario_visualiser
action_execution_ros/ae_test_scenarios/: CMakeLists.txt  package.xml
action_execution_ros/ae_test_scenarios/common/scenarios/: table_two_bottles.yaml  table_two_bottles_one_book.yaml
