<?xml version="1.0"?>
<package>
  <name>ae_data_visualiser</name>
  <version>0.0.1</version>
  <description>A package for visualising execution data</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ae_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ae_msgs</run_depend>
  <export></export>
</package>
