<?xml version="1.0"?>
<package format="2">
  <name>ae_msgs</name>
  <version>0.0.1</version>
  <description>A package for declaring execution-related messages</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</maintainer>
  <license>GPLv3</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
