<?xml version="1.0"?>
<package format="2">
  <name>ae_ros_message_converter</name>
  <version>0.0.1</version>
  <description>A package for converting between ROS message types and the types defined in the action execution module</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
